# hvmsys

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  plan.md  plans.md  vcpkg.json
.github/workflows/: build.yml
docs/: guide-csv-files.md  ho-file-format.md  hvm-freestanding-lib.md  hvm-kernel-development.md  hvm-simulator-roadmap.md  hvm-spec.md  hvm_instruction_set.csv  hvm_register_set.csv  instructions.md  jit_tensor_support.md
docs/roadmaps/: hvm-simulator-roadmap.md  hvmc-roadmap.md
docs/system/: 00-legacy-chip-readme.md  01-hvm-cpu-silicon-packaging-electrical-specifications.md  02-hvm-green-compute-performance-proposal.md  02-hvm-green-compute-specifications.md  03-hvm-mobile-soc-board-detailed-specifications.md  04-platform-specifications-readme.md  05-hvm-mobile-soc-board-production-specifications.md  06-hvm-desktop-motherboard-specifications.md  07-hvm-server-motherboard-specifications.md  08-hvm-robotics-soc-board-specifications.md  09-hvm-open-source-firmware-bios-options.md  10-hvm-lightweight-system-simulator-design.md  11-hvm-system-architecture-comparison.md  12-hvm-memory-map-and-abi.md  README.md
sim/: .clang-format  CMakeLists.txt  CMakePresets.json
sim/cmake/: GenerateOpcodeTable.cmake  generate_opcode_table.py
sim/include/hvm-sim/: version.hpp.in
sim/src/block/: stub.cpp
sim/src/board/: stub.cpp
sim/src/dev/: CMakeLists.txt
sim/src/fw/: CMakeLists.txt  stub.cpp
sim/src/host/: CMakeLists.txt  stub.cpp
sim/src/hvm_sim_block/: CMakeLists.txt
sim/src/hvm_sim_board/: CMakeLists.txt
sim/src/hvm_sim_core/: CMakeLists.txt
sim/src/hvm_sim_jit/: CMakeLists.txt
sim/src/hvm_sim_mem/: CMakeLists.txt
sim/src/hvm_sim_monitor/: CMakeLists.txt
sim/src/jit/: stub.cpp
sim/src/mem/: stub.cpp
sim/src/tests/: CMakeLists.txt
sim/src/tests/hvm-sim-tests/: test_hvmc.cpp
sim/src/tools/hvmc/: CMakeLists.txt
sim/src/tools/hvmc/include/hvmc/: encoder.h  types.h
sim/src/tools/hvmc/src/: elf.cpp  encoder.cpp  lexer.cpp
sim/tests/: CMakeLists.txt
sim/tests/unit/: CMakeLists.txt  main.cpp
sim/tools/: CMakeLists.txt
sim/tools/hvmdisk/: CMakeLists.txt  main.cpp
sim/tools/hvmsys/: CMakeLists.txt  main.cpp
src/cmake/: GenerateOpcodeTable.cmake
src/hvm_sim_block/: CMakeLists.txt
src/hvm_sim_board/: CMakeLists.txt
src/hvm_sim_core/: CMakeLists.txt  executor.cpp  stub.cpp
src/hvm_sim_dev/: CMakeLists.txt  stub.cpp
src/hvm_sim_fw/: CMakeLists.txt
src/hvm_sim_host/: CMakeLists.txt
src/hvm_sim_jit/: CMakeLists.txt
src/hvm_sim_mem/: CMakeLists.txt  memory.cpp
src/hvm_sim_monitor/: CMakeLists.txt  stub.cpp
src/include/hvm-sim/mem/: memory.hpp
src/tests/hvm-sim-tests/: CMakeLists.txt  test_cpu.cpp
src/tools/: CMakeLists.txt
src/tools/hvmc/: CMakeLists.txt
src/tools/hvmc/include/hvmc/: assembler.h  codegen.h  elf.h  lexer.h  parser.h  preprocessor.h
src/tools/hvmc/src/: assembler.cpp  codegen.cpp  elf.cpp  main.cpp  parser.cpp  preprocessor.cpp
src/tools/hvmimg/: CMakeLists.txt  main.cpp
